# fluru_tools

./: .last_build_id  README.md  flutter_bootstrap.js  flutter_rust_bridge.yaml  flutter_service_worker.js  index.html  main.dart.js  main.dart.mjs  main.dart.wasm  manifest.json  pubspec.yaml  version.json
.github/workflows/: build-all.yml
android/app/: build.gradle.kts
assets/: NOTICES
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: custom_alert_dialog.dart  custom_widgets.dart  locale_state.dart  main.dart  theme_state.dart
lib/helper/: preferences_service.dart  save_base64_desktop.dart  save_base64_file.dart  save_base64_web.dart
lib/helper/exceptions/: requester_exceptions.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_pt.dart  app_pt.arb  app_pt_BR.arb
lib/pages/: base64_page.dart  csv_visualizer_page.dart  empty_page.dart  file_verifier_page.dart  format_converter_page.dart  request_tester.dart  start_page.dart
lib/services/: base64_up_down.dart  csv_loader.dart  file_verify.dart  hdoc_request.dart  text_format_converters.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
pkg/: package.json  rust_lib_fluru_tools.js  rust_lib_fluru_tools_bg.wasm
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/services/: api.rs  json_converter.rs  mod.rs  xml_converter.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_fluru_tools.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_fluru_tools.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+8 files in other folders)
